2025-05-14T01:21:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15010111990 # 643
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-14
* notice: last 14d: unq all: 1 11
* notice: prev accum: outdated-unq outdated-all / unq all: 989 1469 / 1000 1480
* notice: next accum: outdated-unq outdated-all / unq all: 990 1470 / 1001 1481
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-30] / [2025-05-13]

2025-05-13T01:22:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14986065211 # 642
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-13
* notice: last 14d: unq all: 1 11
* notice: prev accum: outdated-unq outdated-all / unq all: 988 1468 / 1000 1480
* notice: next accum: outdated-unq outdated-all / unq all: 989 1469 / 1000 1480
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-29] / []

2025-05-12T01:24:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14961806733 # 641
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-12
* notice: last 14d: unq all: 1 12
* notice: prev accum: outdated-unq outdated-all / unq all: 987 1467 / 999 1479
* notice: next accum: outdated-unq outdated-all / unq all: 988 1468 / 1000 1480
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-28] / [2025-05-11]

2025-05-11T01:26:11Z: