@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-14T01:21:12Z",
-  "count_outdated" : 1470,
-  "uniques_outdated" : 990,
-  "count" : 1481,
-  "uniques" : 1001,
+  "timestamp" : "2025-05-15T01:19:21Z",
+  "count_outdated" : 1471,
+  "uniques_outdated" : 991,
+  "count" : 1484,
+  "uniques" : 1004,
   "clones" : [
-    {
-      "timestamp": "2025-05-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-03T00:00:00Z",
       "count": 1,
@@ -97,6 +88,24 @@
     },
     {
       "timestamp": "2025-05-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-14T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-05-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
