@@ -1,12 +1,7 @@
 {
-  "count": 11,
-  "uniques": 1,
+  "count": 13,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-05-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-03T00:00:00Z",
       "count": 1,
@@ -54,6 +49,16 @@
     },
     {
       "timestamp": "2025-05-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-14T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-05-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
